# airbyte

airbyte-integrations/connectors/source-shiftbase/: Dockerfile  acceptance-test-config.yml  main.py  metadata.yaml  pyproject.toml
airbyte-integrations/connectors/source-shiftbase/integration_tests/: acceptance.py
airbyte-integrations/connectors/source-shiftbase/source_shiftbase/: __init__.py  run.py  source.py  spec.yaml  streams.py
airbyte-integrations/connectors/source-shiftbase/source_shiftbase/schemas/: absentees.json  availabilities.json  departments.json  employee_time_distribution.json  employees.json  employees_report.json  schedule_detail_report.json  shifts.json  timesheet_detail_report.json  users.json
airbyte-integrations/connectors/source-shiftbase/unit_tests/: test_incremental_streams.py  test_source.py  test_streams.py
