[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
version = "0.1.47"
name = "source-shiftbase"
description = "Source implementation for shiftbase."
authors = [ "MR MARVIS <mert.karabulut@mrmarvis.com>",]
license = "MIT"
readme = "README.md"
documentation = "https://docs.airbyte.com/integrations/sources/shiftbase"
homepage = "https://airbyte.com"
repository = "https://github.com/airbytehq/airbyte"
[[tool.poetry.packages]]
include = "source_shiftbase"

[tool.poetry.dependencies]
python = "^3.10,<3.14"
airbyte-cdk = "^7"

[tool.poetry.scripts]
source-shiftbase = "source_shiftbase.run:run"

[tool.poetry.group.dev.dependencies]
requests-mock = "*"
pytest-mock = "*"
pytest = "*"

